[gd_scene load_steps=2 format=3 uid="uid://bs0sgp2muacy1"]

[ext_resource type="Script" path="res://Scenes/desert_level.gd" id="1_u5jxq"]

[node name="desert_level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5jxq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.886275, 0.52549, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.5
offset_top = 216.0
offset_right = 180.5
offset_bottom = 299.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Desert Level"

[node name="change_scene_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = 7.0
offset_right = 119.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Change Level"

[node name="Clicks" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 85.0
offset_right = 70.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Clicks: 0"

[node name="clicks_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = 151.0
offset_right = 81.5
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
disabled = true
text = "Click Me!"

[connection signal="pressed" from="change_scene_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="clicks_btn" to="." method="_on_clicks_btn_pressed"]
